[tool.poetry]
name = "mystreamlitpoc"
version = "0.1.0"
description = ""
authors = ["Rodrigo <dbconsultoria@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.0"
pandas = "^2.2.0"
plotly = "^5.20.0"
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
